--- a/public/css/index.css
+++ b/public/css/index.css
@@ -67,6 +67,30 @@
     color: var(--primary);
 }
 
+
+/*new css*/
+
+.apartment-card {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+/* Force the card-body to expand and push the button down */
+.apartment-card .card-body {
+    display: flex;
+    flex-direction: column;
+    flex: 1; /* This is the "magic" line */
+}
+
+/* This pushes the button to the absolute bottom of the card-body */
+.apartment-card .btn {
+    margin-top: auto;
+}
+
+
+/*end new code*/
+
 /* Apartment Cards */
 .apartment-card .card-img-top {
     height: 220px;
