--- a/public/css/apartments.css
+++ b/public/css/apartments.css
@@ -8,6 +8,10 @@
     position: sticky;
     top: 100px;
 }
+.custom-width-container{
+
+     max-width: 90%;
+}
 
 .filter-group {
     margin-bottom: 2rem;
