--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,6 +1,6 @@
 /* Hero Section */
 .hero-section {
-    background: linear-gradient(rgba(30, 58, 138, 0.8), rgba(30, 58, 138, 0.6)), url('https://images.unsplash.com/photo-1523240795612-9a054b0db644?ixlib=rb-4.0.3&auto=format&fit=crop&w=1920&q=80');
+    background: linear-gradient(rgba(30, 58, 138, 0.8), rgba(30, 58, 138, 0.6)), url('./../img/photo-1523240795612-9a054b0db644.avif');
     background-size: cover;
     background-position: center;
     height: 85vh;
